--- a/index.html
+++ b/index.html
@@ -2,4 +2,5 @@
 layout: home
 author_profile: true
 ---
-test 
+<h3>About</h3>
+I am an undergraduate student styding Computer Science with a minor in Mathematcs at Winthrop University
