--- a/index.html
+++ b/index.html
@@ -3,4 +3,4 @@ layout: home
 author_profile: true
 ---
 <h3>About</h3>
-I am an undergraduate student styding Computer Science with a minor in Mathematcs at Winthrop University
+<p>I am an undergraduate student styding Computer Science with a minor in Mathematcs at Winthrop University</p>
