--- a/index.html
+++ b/index.html
@@ -2,5 +2,19 @@
 layout: home
 author_profile: true
 ---
-<h3>About</h3>
-<p>I am an undergraduate student styding Computer Science with a minor in Mathematcs at Winthrop University</p>
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+p{
+    font-size: 15px;;
+}
+</style>
+</head>
+<body>
+
+    <h3>About</h3>
+    <p>I am an undergraduate student styding Computer Science with a minor in Mathematcs at Winthrop University</p>
+
+</body>
+</html>
