--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@ p{
 
     <h3>About</h3>
     <p>I am an undergraduate student styding Computer Science with a minor in Mathematcs at Winthrop University</p>
-
+    <h3>Education</h3>
+    <p></p>
+    <h3>Experience</h3>
+    <p></p>
 </body>
 </html>
