--- a/index.html
+++ b/index.html
@@ -6,17 +6,20 @@ author_profile: true
 <html>
 <head>
 <style>
-p{
-    font-size: 15px;;
+p,ul{
+    font-size: 15px;
 }
 </style>
 </head>
 <body>
 
     <h3>About</h3>
-    <p>I am an undergraduate student styding Computer Science with a minor in Mathematcs at Winthrop University</p>
+    <p>I am currently a Senior at Winthrop University pursuing a major in Computer Science and a minor in Mathematics with a strong interest in furthering my studies in the area of 
+    artificial intelligence and data science (ML). I am also a soccer player on the Winthrop men’s soccer team with honors, (Big South NCAA Division 1 Athletic Conference, Presidential Honor Award 2017-2018, 2018-2019).  </p>
     <h3>Education</h3>
-    <p></p>
+    <ul>
+        B.S. in Computer Science with a minor in Mathematics, Winthrop Univeristy, Department of Computer Science and Quantitative Methods, Rock Hill, SC, United States.
+    </ul>
     <h3>Experience</h3>
     <p></p>
 </body>
