--- a/index.html
+++ b/index.html
@@ -18,9 +18,13 @@ p,ul{
     artificial intelligence and data science (ML). I am also a soccer player on the Winthrop men’s soccer team with honors, (Big South NCAA Division 1 Athletic Conference, Presidential Honor Award 2017-2018, 2018-2019).  </p>
     <h3>Education</h3>
     <ul>
-        B.S. in Computer Science with a minor in Mathematics, Winthrop Univeristy, Department of Computer Science and Quantitative Methods, Rock Hill, SC, United States.
+        <b>B.S. in Computer Science with a minor in Mathematics</b>, Winthrop Univeristy, Department of Computer Science and Quantitative Methods, Rock Hill, SC, United States.
     </ul>
-    <h3>Experience</h3>
-    <p></p>
+    <h3>Academic Interest</h3>
+    <p>I am excited and intrigued by the area of artificial intelligence (AI) and the way it promises to transform our lives.
+         I understand that there is a prevailing opinion that AI will define the fourth industrial revolution, as revolutionary for humanity as the steam engine,
+         electricity, and the Internet. I am looking forward to become part of this new revolution. How will our society and the way it functions be different in 
+         the coming decades? How will we address the unintended and adverse consequences of AI? I look forward to witnessing all the transformations that 
+         the new technologies and the new way of thinking promise us.</p>
 </body>
 </html>
