--- a/index.html
+++ b/index.html
@@ -13,18 +13,29 @@ p,ul{
 </head>
 <body>
 
-    <h3>About</h3>
+    <h3>About Me</h3>
     <p>I am currently a Senior at Winthrop University pursuing a major in Computer Science and a minor in Mathematics with a strong interest in furthering my studies in the area of 
     artificial intelligence and data science (ML). I am also a soccer player on the Winthrop men’s soccer team with honors, (Big South NCAA Division 1 Athletic Conference, Presidential Honor Award 2017-2018, 2018-2019).  </p>
     <h3>Education</h3>
     <ul>
-        <b>B.S. in Computer Science with a minor in Mathematics</b>, Winthrop Univeristy, Department of Computer Science and Quantitative Methods, Rock Hill, SC, United States.
+        <li><b>B.S. in Computer Science with a minor in Mathematics</b>, Winthrop Univeristy, Department of Computer Science and Quantitative Methods, Rock Hill, SC, United States.</li>
     </ul>
     <h3>Academic Interest</h3>
     <p>I am excited and intrigued by the area of artificial intelligence (AI) and the way it promises to transform our lives.
          I understand that there is a prevailing opinion that AI will define the fourth industrial revolution, as revolutionary for humanity as the steam engine,
          electricity, and the Internet. I am looking forward to become part of this new revolution. How will our society and the way it functions be different in 
          the coming decades? How will we address the unintended and adverse consequences of AI? I look forward to witnessing all the transformations that 
-         the new technologies and the new way of thinking promise us.</p>
+         the new technologies and the new way of thinking promise us.
+    </p>
+    <h3>Experience</h3>
+    <p>
+        <ul>
+            <li><b>Research at North Carolina State University</b></li> 
+            <p>Development of inovative approach for  Effective Public Outreach for Transportation Projects Using Geospatial Analytics and Online Advertising. </p>
+            <li><b>The Cornell, Maryland, Max Planck Pre-doctoral Research School 2020</b></li> 
+            <p>Outstanding undergraduate and Masters students are invited to learn about cutting-edge research in computer science, including databases and data analysis, distributed systems, security and privacy, Internet measurement and network architecture, large-scale machine learning, and theory of deep learning. Leading researchers will engage with attendees in their areas of expertise:
+               the curriculum will include lectures and interaction with faculty from participating institutions. </p>
+        </ul>
+    </p>
 </body>
 </html>
