--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@ author_profile: true
 p{
     font-size: 15px;
 }
+.font {
+
+    font-size: 15px;
+}
 </style>
 </head>
 <body>
@@ -17,13 +21,13 @@ p{
     <p>I am currently a Senior at Winthrop University pursuing a major in Computer Science and a minor in Mathematics with a strong interest in furthering my studies in the area of 
     artificial intelligence and data science (ML). I am also a soccer player on the Winthrop men’s soccer team with honors, (Big South NCAA Division 1 Athletic Conference, Presidential Honor Award 2017-2018, 2018-2019).  </p>
     <h3>Education</h3>
-    <ul>
+    <ul class="font">
         <li><b>B.S. in Computer Science with a minor in Mathematics</b>, Winthrop Univeristy, Department of Computer Science and Quantitative Methods, Rock Hill, SC, United States.</li>
     </ul>
 
     <h3>Experience</h3>
     <p>
-        <ul>
+        <ul class="font">
             <li><b>Research at North Carolina State University</b></li> 
             <p>Development of inovative approach for Effective Public Outreach for Transportation Projects Using Geospatial Analytics and Online Advertising. </p>
             <li><b>The Cornell, Maryland, Max Planck Pre-doctoral Research School 2020</b></li> 
