--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ p{
     <h3>Experience</h3>
     <p>
         <ul class="font">
-            <li><b>Research at North Carolina State University</b></li> 
+            <li><b>Research Assistant at North Carolina State University</b></li> 
             <p>Development of inovative approach for Effective Public Outreach for Transportation Projects Using Geospatial Analytics and Online Advertising. </p>
             <li><b>The Cornell, Maryland, Max Planck Pre-doctoral Research School 2020</b></li> 
             <p>Outstanding undergraduate and Masters students are invited to learn about cutting-edge research in computer science, including databases and data analysis, distributed systems, security and privacy, Internet measurement and network architecture, large-scale machine learning, and theory of deep learning. Leading researchers will engage with attendees in their areas of expertise:
