--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@ p{
     artificial intelligence and data science (ML). I am also a soccer player on the Winthrop men’s soccer team with honors, (Big South NCAA Division 1 Athletic Conference, Presidential Honor Award 2017-2018, 2018-2019).  </p>
     <h3>Education</h3>
     <ul class="font">
-        <li><b>B.S. in Computer Science with a minor in Mathematics</b>, Winthrop Univeristy, Department of Computer Science and Quantitative Methods, Rock Hill, SC, United States.</li>
+        <li>(In Progress)<b>B.S. in Computer Science with a minor in Mathematics</b>, Winthrop Univeristy, Department of Computer Science and Quantitative Methods, Rock Hill, SC, United States.</li>
     </ul>
 
     <h3>Experience</h3>
     <p>
         <ul class="font">
             <li><b>Research Assistant at North Carolina State University</b></li> 
-            <p>Development of inovative approach for Effective Public Outreach for Transportation Projects Using Geospatial Analytics and Online Advertising. </p>
+            <p>Development of an inovative approach for Effective Public Outreach for Transportation Projects Using Geospatial Analytics and Online Advertising. </p>
             <li><b>The Cornell, Maryland, Max Planck Pre-doctoral Research School 2020</b></li> 
             <p>Outstanding undergraduate and Masters students are invited to learn about cutting-edge research in computer science, including databases and data analysis, distributed systems, security and privacy, Internet measurement and network architecture, large-scale machine learning, and theory of deep learning. Leading researchers will engage with attendees in their areas of expertise:
                the curriculum will include lectures and interaction with faculty from participating institutions. </p>
