--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ p{
     artificial intelligence and data science (ML). I am also a soccer player on the Winthrop men’s soccer team with honors, (Big South NCAA Division 1 Athletic Conference, Presidential Honor Award 2017-2018, 2018-2019).  </p>
     <h3>Education</h3>
     <ul class="font">
-        <li>(In Progress)<b>B.S. in Computer Science with a minor in Mathematics</b>, Winthrop Univeristy, Department of Computer Science and Quantitative Methods, Rock Hill, SC, United States.</li>
+        <li><b>B.S. in Computer Science with a minor in Mathematics</b>, Winthrop Univeristy, Department of Computer Science and Quantitative Methods, Rock Hill, SC, United States. <i>(In Progress)</i></li>
     </ul>
 
     <h3>Experience</h3>
